# MetaNode--EVMAndroid

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/eEVM/: account.h  exception.h  globalstate.h  opcode.h  processor.h  storage.h  util.h
app/src/main/cpp/include/eEVM/simple/: simpleaccount.h  simpleglobalstate.h  simplestorage.h
app/src/main/cpp/samples/: README.md
app/src/main/cpp/samples/erc20/: ERC20.sol
app/src/main/cpp/samples/my_erc/: main.cpp
app/src/main/cpp/src/: processor.cpp  util.cpp
app/src/main/cpp/src/simple/: simpleaccount.cpp  simpleglobalstate.cpp  simplestorage.cpp
app/src/main/java/com/example/nativec/: EVMCallRs.java  EVMDeployRs.java  EVMGetData.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
